--- a/travello/index.html
+++ b/travello/index.html
@@ -253,7 +253,7 @@
 						{% for dest in destion %}
 						<div class="destination item">
 							<div class="destination_image">
-								<img src="{{BaseUrl}}/{{dest.img}}" alt="">
+								<img src="{{dest.img.url}}" alt="">
 								{% if dest.offer %}
 								<div class="spec_offer text-center"><a href="#">Special Offer</a></div>
 								{% endif %}
